--- a/template/jobapp/job-single.html
+++ b/template/jobapp/job-single.html
@@ -29,7 +29,7 @@
 
     <div class="row align-items-center mb-5">
       <div class="col-lg-8 mb-4 mb-lg-0">
-        <div class="d-flex align-items-center">
+        <div class="align-items-center  d-lg-flex">
           <div class="border p-2 d-inline-block mr-3 rounded">
             <img src="{% static 'images/job_logo2.jpg' %}" alt="Image">
           </div>
@@ -37,10 +37,10 @@
             <h2>{{ job.title }}</h2>
             <div>
               <span class="ml-0 mr-2 mb-2"><span class="icon-briefcase mr-2"></span><a href="{{ job.url }}">{{ job.company_name }}</a></span>
-              <span class="m-2"><span class="icon-room mr-2"></span>{{ job.location }}</span>
-              <span class="m-2"><span class="icon-clock-o mr-2"></span>
-                <span class="text-primary">
-
+              <span class="ml-0 mr-2 mb-2"><span class="icon-room mr-2"></span>{{ job.location }}</span>
+              
+              <span class="ml-0 mr-2 mb-2"><span class="icon-clock-o mr-2"></span>
+              <span class="text-primary">
                   {% if job.job_type == '1' %}
                   Full Time
                   {% elif job.job_type == '2'%}
@@ -123,9 +123,6 @@
             Description</h3>
           <div align="justify">{{ job.description | safe }}</div>
         </div>
-
-        
-
       </div>
       <div class="col-lg-4">
         <div class="bg-light p-3 border rounded mb-4">
