--- a/template/header.html
+++ b/template/header.html
@@ -25,8 +25,10 @@
   <header class="site-navbar mt-3">
     <div class="container-fluid">
       <div class="row align-items-center">
-        <div class="site-logo col-6"><a href="{% url 'jobapp:home' %}">Remote Job Finder</a></div>
-        <nav class="mx-auto site-navigation">
+        <div class="site-logo col-6 col-md-4 col-lg-3">
+          <a href="{% url 'jobapp:home' %}">Remote Job Finder</a>
+      </div>
+              <nav class="mx-auto site-navigation">
           <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
             <li><a href="{% url 'jobapp:home' %}" class="nav-link">Home</a></li>
             <li><a href="{% url 'jobapp:about_us' %}">About</a></li>
