--- a/template/jobapp/index.html
+++ b/template/jobapp/index.html
@@ -9,26 +9,25 @@
 
   <div class="container">
     <div class="row align-items-center justify-content-center">
-      <div class="col-md-12">
-        <div class="mb-5 text-center">
+      <div class="col-md-12 text-center">
+        <div class="mb-5 mt-md-0 mt-lg-0 mt-xl-0 mt-5">
           <h1 class="text-white font-weight-bold">Elevate Your Career to New Heights!</h1>
-          <p class="lead text-white">Discover extraordinary opportunities that match your ambition. Your journey to success begins here, where passion meets profession.
-          </p>
-          <span class="lead text-white">Explore our diverse range of courses designed to enhance your skills and propel your career forward.</span>
-          
+          <p class="lead text-white">Discover extraordinary opportunities that match your ambition. Your journey to success begins here, where passion meets profession.</p>
+      
         </div>
       
-      <form method="GET" action="{% url 'jobapp:search_result' %}" class="search-jobs-form">
+        <form method="GET" action="{% url 'jobapp:search_result' %}" class="search-jobs-form">
           {% include 'jobapp/search.html' %}
         </form>
       </div>
     </div>
   </div>
   <a href="#next" class="scroll-button smoothscroll">
-    <span class=" icon-keyboard_arrow_down"></span>
+    <span class="icon-keyboard_arrow_down"></span>
   </a>
 
 </section>
+
 
 <section class="py-5 bg-image overlay-primary fixed overlay" id="next"
   style="background-image: url('{% static 'images/bgrr.jpg' %}');">
@@ -37,6 +36,7 @@
       <div class="col-md-7 text-center">
         <h2 class="section-title mb-2 text-white">Discover the Power of Remote Job Finder</h2>
         <p class="lead text-white">Join a thriving community where opportunities and talent converge. Explore the impact we've made together!</p>
+
       </div>
 
     </div>
