--- a/template/account/password_reset_email.html
+++ b/template/account/password_reset_email.html
@@ -1,14 +1,41 @@
-{% load i18n %}
-{% load static %}
-{% autoescape off %}
-Someone asked for password reset for email {{ email }}. Follow the link
-below:
+<!-- account/password_reset_email.html -->
 
-{{ protocol }}://{{ domain }}{% url 'account:password_reset_confirm' uidb64=uid token=token %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% blocktrans %}If you didn't request a password reset, please ignore this email.{% endblocktrans %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Password Reset</title>
+</head>
 
-{% endautoescape %}
+<body>
 
-Regards,
-Remote Job Finder
+    <div style="background-color: #f5f5f5; padding: 20px; text-align: center;">
+        <img src="https://i.ibb.co/wB7FVYG/remote-job-finder-high-resolution-logo-transparent.png" style="width: 80%; height: 150px;  object-fit: fill; position: relative; z-index: 1;" alt="Image" class="img-fluid">
+
+        <h2 style="color: #333333;">Forgot Your Password, {{ email}} </h2>
+
+        <p style="color: #666666; font-size: 16px;">
+            We received a request to reset your password. To complete the process, click the link below:
+        </p>
+
+        <a href="{{ protocol }}://{{ domain }}{% url 'account:password_reset_confirm' uidb64=uid token=token %}"
+            style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #4caf50; color: white; text-decoration: none; border-radius: 5px; font-size: 16px;">
+            Reset Your Password
+        </a>
+
+        <p style="color: #666666; font-size: 16px;">
+            If you did not request a password reset, please ignore this email.
+        </p>
+
+    </div>
+
+    <!-- Footer Section -->
+    <div style="margin-top: 0px; text-align: center; background-color: #333333; padding: 10px; color: white;">
+        <p style="margin: 0;">Copyright&copy; 2023, Remote Job Finder. All Rights Reserved.</p>
+    </div>
+
+</body>
+
+</html>
