--- a/template/footer.html
+++ b/template/footer.html
@@ -52,7 +52,7 @@
 
               Copyright &copy; <a>
               <script type="text/JavaScript">
-                document.write(new Date().getFullYear());</script> Biwas Pudasaini(Treeleaf)
+                document.write(new Date().getFullYear());</script> Biwas Pudasaini(CICD)
                 </div>
             </a>
             
